--- a/newlang_project/project.yml
+++ b/newlang_project/project.yml
@@ -44,7 +44,14 @@ commands:
   - name: install
     help: "Install the new language object from Cadet"
     script:
-      - "echo Spacy already has a Ukrainian language object, so will use that"
+      - "rm -rf lang"
+      - "mkdir lang"
+      - "mkdir lang/${vars.lang}"
+      - "cp -r assets/${vars.treebank}/2_new_language_object/ lang/${vars.lang}/${vars.lang}" 
+      - "mv lang/${vars.lang}/${vars.lang}/setup.py lang/${vars.lang}/"
+      - "pip install -e lang/${vars.lang}"
+    deps:
+      - "assets/${vars.treebank}/2_new_language_object"
       
   - name: convert
     help: "Convert the data to spaCy's format"
